# Standard-Dictionary

./: README.md
GenericDictionary/: CMakeLists.txt  Dictionary.cpp  Dictionary.h  KeyValue.cpp  KeyValue.h  main.cpp
GenericDictionary/Testing/: DictionaryTester.cpp  DictionaryTester.h  KeyValueTester.cpp  KeyValueTester.h  testingMain.cpp
